objects/voice_connector__VCCallRecording__c.object
<CustomObject>
    <fields>
        <fullName>voice_connector__VCCall__c</fullName>
        <label>VCCall</label>
        <referenceTo>voice_connector__VCCall__c</referenceTo>
        <relationshipLabel>VCCall Recordings</relationshipLabel>
        <relationshipName>VCCallRecordings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCRecordingDuration__c</fullName>
        <label>Recording Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>voice_connector__VCRecordingUrl__c</fullName>
        <label>Recording Url</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>VCCall Recording</label>
    <listViews>
        <fullName>voice_connector__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCCall Recordings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>